--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ header .container .mobile span:nth-child(3) {
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
-    box-shadow: 2px 2px 3px ;
+    box-shadow: 0px 4px 4px #00000025;
     width: 45%;
 }
 .about-us .image img {
@@ -552,7 +552,7 @@ header .container .mobile span:nth-child(3) {
     border-bottom-right-radius: 50px;
     margin-top: 50px;
     text-align: center;
-    box-shadow: 1px 1px 5px;
+    box-shadow: 0px 4px 4px #00000025;
     position: relative;
 }
 @media (min-width: 992px) {
